objects/nitro__Nitro_EverydayActivity__c.object
<CustomObject>
    <fields>
        <fullName>nitro__IsEveryone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEveryone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__actionId__c</fullName>
        <label>actionId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__awardee__c</fullName>
        <label>awardee</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__challengeId__c</fullName>
        <label>challengeId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__logonce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>logonce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__object__c</fullName>
        <label>object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__pointsCategories__c</fullName>
        <label>pointCategories</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__prefRuleId__c</fullName>
        <label>prefRuleId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__ruleId__c</fullName>
        <label>ruleId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__userFilter__c</fullName>
        <label>userFilter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__visibility__c</fullName>
        <label>visibility</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Nitro EverydayActivity</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nitro EverydayActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro EverydayActivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>